# MiniEngine

./: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json
include/: engine.h
src/: engine.c  main.c
